Completed part 2
