# src/routes/books.routes.js
@@ -1,4 +1,5 @@
 const router = require('express').Router();
+const { isAuthenticated } = require('../middleware/authenticate');
 const { bookValidationRules, validate } = require('../helpers/validate');
 const {
   getAll,
@@ -12,10 +13,10 @@ router.get('/', getAll);
 
 router.get('/:id', getSingle);
 
-router.post('/', bookValidationRules, validate, addBook);
+router.post('/', isAuthenticated, bookValidationRules, validate, addBook);
 
-router.put('/:id', bookValidationRules, validate, updateBook);
+router.put('/:id', isAuthenticated, bookValidationRules, validate, updateBook);
 
-router.delete('/:id', deleteBook);
+router.delete('/:id', isAuthenticated, deleteBook);
 
 module.exports = router;
